icon src change

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     </div>
                     
                     <div class="s1_w_r_buttons">
-                        <button  type="button" class="s1_button1_filtr" id='toggleButton2'><img src="../static/icon/filtri.svg" alt="err" ></button>
+                        <button  type="button" class="s1_button1_filtr" id='toggleButton2'><img src="static/icon/filtri.svg" alt="err" ></button>
                         <!-- ეს ქვედა არის თოგლე ღილაკი, ამზე კლიკით იხსნბა დილოგის ფნჯრა, ნახე ჯსში, წვდბა იდით-->
                         <button type="button" class="s1_button2_add" id="toggleButton" > <img src="static/icon/add.svg" alt="err"></button>
-                        <button type="submit" class="s1_button3_washla"> <img src="../static/icon/washla.svg" alt="err" ></button>
+                        <button type="submit" class="s1_button3_washla"> <img src="static/icon/washla.svg" alt="err" ></button>
                     </div>
                  </div>
             </form>
